--- a/posts/2015-12-19.md
+++ b/posts/2015-12-19.md
@@ -67,25 +67,31 @@ Yeah actually, our dataflow actually graphs kinda look more like this (actual SC
 
 And this is weird and complicated, because we have cycles and so output ports can reach back to input ports on the same operators, and if we just think about connectivity between ports it is all a terrible mess. We also have operators that speak in terms of different types of timestamps: operators in each of the connected components have different timestamp types from the containing scope, and (logically, at least) from each other.
 
-Naiad got around this by putting the whole structure of the dataflow graph in one place, and it was sort of a mess. We had a bunch of baked assumptions about everyone using `UInt64` values, and the only thing they could mean was "loop counter" and ... eesh. Ok, we aren't going to do that this time.
+Naiad got around this by putting the whole structure of the dataflow graph in one place, and it was sort of a mess. We had a bunch of baked assumptions about all timestamps being `UInt64[]`s, and the only thing each could mean was "loop counter" and ... eesh. Ok, we aren't going to do that this time.
 
-Let's break the troublesome bits into two more manageable parts, which we'll tackle individually: (a) graphs with cycles, and (b) graphs with nested scopes.
+Let's look at our initial simplified dataflow graph again.
+
+![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/dataflow.png)
+
+Let's break the troublesome bits into two more manageable parts, (a) graphs with cycles, and (b) graphs with nested scopes, which we'll tackle individually.
 
 #### Graphs with cycles
 
-Let's just focus in on the part of our initial dataflow graph with the cycle in it:
+Let's just focus in on the part of our dataflow graph with the cycle in it:
 
 ![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/cyclic-dataflow.png)
 
-If we do what we said up above about determining which output ports can reach which input ports, we pretty quickly conclude that all the output ports can reach all the input ports. If `Op2` holds a capability for timestamp `t`, it could make its way back around to the input to `Op2`. This makes it hard for `Op2` to hold on to a capability until it is sure it won't receive any more input. We just can't guarantee that.
+If we do what we said up above about determining which output ports can reach which input ports, we pretty quickly conclude that all the output ports can reach all the input ports. If `Op2` holds a capability for timestamp `t`, it could make its way back around to the input to `Op2`. This makes it hard for `Op2` to hold on to a capability until it is sure it won't receive any more input, because the capability itself prevents the notification.
 
 But actually, there is that handy `feedback` operator sitting there. We know, in our heart-of-hearts, that this operator will advance the timestamp of each message that moves through it. We know that any message that `Op2` sends won't return to the input of `Op2` with the same timestamp; it has to be incremented by at least one.
 
-This leads us to a refinement of the "outputs connected to inputs" approach. Rather than just track connectivity, we'll track connectivity and the least action that must happen to a timestamp as it goes from the output to the input. In the example above, `Op2`'s output is connected to its input but requires the timestamp to be incremented by one. As long as we note this down, and make sure to invoke this when we do our hard look and think, we will be able to conclude that it is safe to notify `Op2`'s input even though it holds a capability for the same time.
+This leads us to a refinement of the "outputs connected to inputs" approach. Rather than just track connectivity, we'll track connectivity and the least action that must happen to a timestamp as it goes from the output to the input. In the example above, `Op2`'s output is connected to its input but requires the iteration coordinate of its timestamp to be incremented by one. As long as we note this down, and make sure to invoke this when we do our hard look and think, we will be able to conclude that it is safe to notify `Op2`'s input even though it holds a capability for the same time.
 
-A quick point about generality: any output may connect to any input, but it may do so through many paths. There may be a few different things that could happen to the timestamp as it goes, and we need to make sure to track the *least* that happens to the timestamp. This isn't as simple as taking a min, because the actions that happen to the timestamp don't have to be totally ordered (Naiad assumed they were, preventing some types of notification). What we track for each `(output, input)` pair is a list of actions-on-timestamps, where no one is strictly worse than any other. This list often has size one (or zero), but it could have multiple entries: for example, there might be one path that bumps the iteration counter, and one path that bumps the round-of-input counter. 
+A quick point about generality: any output may connect to any input, but it may do so through many paths. There may be a few different things that could happen to the timestamp as it goes, and we need to make sure to track the *least* that happens to the timestamp. This isn't as simple as taking a min, because the actions that happen to the timestamp don't have to be totally ordered (Naiad assumed they were, preventing some types of notification and restricting concurrency). What we track for each `(output, input)` pair is a list of actions-on-timestamps, where no one is strictly worse than any other. This list often has size one (or zero), but it could have multiple entries: for example, there might be one path that bumps the iteration counter, and one path that bumps the round-of-input counter.
 
-Great, we have a good idea about how we think about timestamps going from an output port to an input port, and it even works in cycles. How do we get this information? Do we just look at `feedback` operators and trace paths through them? It turns out it can be more complicated (and fun!) than this. Let's go through the next subsection to motivate why it gets more complicated, and then we'll put together actual rules for determining these path summaries.
+Great, we have a good idea about how we think about timestamps going from an output port to an input port, and it even works in cycles. How do we get this information? Do we just look at `feedback` operators and trace paths through them? It turns out it can be more complicated (and fun!) than this. Instead, we will have operators explain what sorts of horrible things they might do to messages that pass through them, but with a twist!
+
+Let's go through the next subsection to motivate why it gets more complicated, and then we'll put together actual rules for determining these path summaries.
 
 #### Graphs with subgraphs
 
@@ -103,19 +109,23 @@ Ok, that isn't really true. We need to know some amount of information about wha
 
 ![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/abstracted-dataflow.png)
 
-So we need the connectivity between inputs and outputs? Yeah, basically. Let's go just a bit further and say that we want the path summaries from inputs to outputs. What has to happen to timestamps on each input before they reach each of the outputs. Perhaps some of the operators tweak the timestamp as they go, and messages on the first input port can reach the first output with unchanged timestamp, but can only reach the third output with timestamp plus one.
+If we just pretend is is a big all-to-all blob, we lose precision. We want the same accuracy about "who might get what messages" with this abstraction in place as we would have gotten with the contained subgraph opened up for inspection.
 
-You might be thinking "whoa, this is all too complicated" and I sort of agree. Mostly I agree that we should do the math right and let the computer figure out the consequences, because I've already spent a few years thinking I was clever enough to keep all the assumptions in my head. As it turns out, I have other assumptions I want to keep in my head, so we'll just try and do this part correctly instead.
+So we need the connectivity between inputs and outputs? Yeah, basically. Let's go just a bit further and say that we want the path summaries from each input to each outputs. What has to happen to timestamps on each input before they reach each of the outputs. Perhaps some of the operators tweak the timestamp as they go, and messages on the first input port can reach the first output with unchanged timestamp, but can only reach the third output with timestamp plus one. As far as I understand, if the subgraph reports this information we are giving up very little (or nothing) by otherwise concealing its details.
 
-Each operator, nested or not, needs to summarize the minimal actions on timestamps from each input port to each output port. Many operators will just describe their connectivity, but operators like `feedback` and nested subgraphs will thank us for this.
+You might be thinking "whoa, this is all too complicated" and I sort of agree. Mostly I agree that we should do the math right and let the computer figure out the consequences, because I've already spent a few years thinking I was clever enough to keep all the assumptions in my head. As it turns out, I have other assumptions I want to keep in my head, so we'll just try and do this part correctly instead. 
+
+The cost of getting it wrong is missed opportunities for notification, in the worst case deadlock. So, let's try and stick to the zero-cost abstraction motto, and summarize operators with as much precision as possible.
+
+Each operator, nested or not, needs to summarize the minimal actions on timestamps from each input port to each output port. Many operators will just have full connectivity, but operators like `feedback` and nested subgraphs will thank us for this. 
 
 #### Subgraphs within graphs
 
-The other side of the nesting story, where we just wallpapered over those subgraphs and pretended they didn't exist, is that the subgraphs themselves need to know how to process information about the outside world. It turns out that there is a fairly simple transformation we can do that makes this reasoning much simpler. If we take the scope wrapped around the nested scope, and pretend that the whole outside world is just an operator, with its `enter` and `leave` operator as output ports and input ports, respectively, we get a simple but possibly insane take on the nested subgraph:
+The other side of the nesting story, where we just wallpapered over those subgraphs and pretended they didn't exist, is that the subgraphs themselves need to know how to process information about the outside world. It turns out that there is a fairly simple transformation we can do that makes this reasoning much simpler. If we take the scope wrapped around the nested scope, and pretend that the whole outside world is just an operator, with its `enter` and `leave` operator as output ports and input ports, respectively, we get a possibly insane take on the nested subgraph:
 
 ![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/inception-dataflow.png)
 
-All of the math works out just fine, as long as the outside world summarizes itself back to the nested subgraph. The subgraph now understands what happens to timestamps on messages that are handed to a `leave` operator (an input to the `outside world`) when they return through `enter` operators (an output of the `outside world`). Messages floating around outside the subgraph are just capabilities of the `outside world`; the subgraph doesn't need to know where they are, just that they exist as capabilities for the `enter` ports. 
+All of the math works out just fine, as long as `outside world` summarizes itself as an operator to the nested subgraph. The summary explains what happens to timestamps on messages that are handed to a `leave` operator (an input to `outside world`) when they return through `enter` operators (an output of `outside world`). Messages floating around outside the subgraph are just capabilities of `outside world`; the subgraph doesn't need to know where they are, just that they exist as capabilities for the `enter` ports. 
 
 It is a lot like the outside world is actually a nested scope within the subgraph.
 
@@ -233,9 +243,9 @@ Naiad had a distributed protocol for tracking progress, and we are going to use 
 
 Naiad's progress tracking was based on the idea that as each worker does work, it can record changes to the counts of messages and capabilities of timestamps at various locations in the graph. If each worker produces a stream of these updates, and broadcasts it to other workers, each worker eventually sees all of the updates that happen across the computation.
 
-However, this broadcasting happens asynchronously, and it is possible that some messages overtake others. A worker might hear about a message received at one worker before it even hears from the worker that produced it. With a few careful restrictions, no problemo. As long as workers send news about new work before they sent news about retired work, no worker would ever incorrectly determine that a time had closed out before it actually does. There is [a fairly long formal proof](http://research.microsoft.com/apps/pubs/default.aspx?id=183826) about why this works. 
+However, this broadcasting happens asynchronously, and it is possible that some progress update overtake others. A worker might hear about a message received at one worker before it even hears from the worker that produced it. With a few careful restrictions, no problemo. As long as workers send updates about new work before they sent updates about retired work, no worker would ever incorrectly determine that a time had closed out before it actually does. There is [a fairly long formal proof](http://research.microsoft.com/apps/pubs/default.aspx?id=183826) about why this works. 
 
-We are going to do something similar here, with a few minor tweaks related to our abstraction of subgraphs as operators. One can tweak the argument up above to require workers sends batches of updates atomically, so that all corresponding increments and decrements are received together at each remote worker. In fact, Tom did just this, as part of a liveness argument for the distributed protocol.
+We are going to do something similar here, with a few minor tweaks related to our abstraction of subgraphs as operators. One can tweak the argument up above to require that workers sends batches of updates atomically, so that all corresponding increments and decrements are received together at each remote worker. In fact, Tom did just this, as part of a liveness argument for the distributed protocol.
 
 With the above modification from streams of updates to streams of batches of updates, you can remove any ordering requirements on the batches of updates. As long as each batch arrives at remote workers intact, with both its increments and decrements, it doesn't matter what order they are received in. This might sound a little crazy, but there are still enough causal dependencies to keep the system in order:
 
@@ -245,7 +255,7 @@ With the above modification from streams of updates to streams of batches of upd
 
 If an operator only sends messages in response to notifications, we get a chain of causal dependencies that ensure that one notification must happen before another, and some message receives must happen before other message sends. The main relaxation is that we don't require the order of execution of the updates to be reflected in the update stream.
 
-This re-ordering property roughly says that it is safe for any worker to see any *subset• of batches of updates other workers produce. This is especially helpful for us, as nested subgraphs perform progress tracking reasoning independently, and do not (at least not without a good deal more work) coordinate their transmissions.
+This re-ordering property roughly says that it is safe for any worker to see any *subset* of batches of updates other workers produce. This is especially helpful for us, as nested subgraphs perform progress tracking reasoning independently, and do not (at least not without a good deal more work) coordinate their broadcasts with other scopes in the same worker.
 
 ### Attention to detail
 
@@ -256,6 +266,18 @@ One race condition went unobserved until October, despite tests on 100s of worke
 This required a bit of a rethink, which actually lead to the view above as subsetting batches of updates. At least, that got invented so that there would be a clear property to uphold and leave invariants to test. The problem here is that the batch of updates corresponding to "received some messages, held a capability" got split up. The first half went by way of the peer parent scopes, the second half went directly (if slowly) to the peer scope. That doesn't happen any more. In fact, in fixing the bug the protocol got a bit more efficient, because we make sure that each update gets moved exactly once (which wasn't true before, but not in an obviously unsafe way).
 
 It is likely that the progress tracking code will evolve, but it has a narrow interface with relatively clear guarantees, and a distributed protocol with fairly simple invariants to maintain. It will be good to develop this further, and shake out as much parallelism as we can.
+
+### Asynchronous performance
+
+One of the most appealing characteristics of this protocol is that it is totally asynchronous. Workers produce "exhaust" from their computations, and this information suffices to let other workers know how much work is done. If a worker `A` sends a message to `B`, who receives it and sends a message to `C`, who receives it and does nothing, the updates broadcast might look like
+
+    A : (T, +1)
+    B : (T, -1), (T', +1)
+    C : (T', -1)
+
+A slightly lazy worker `D` who doesn't receive any messages can just receive the three progress messages and confirm that they cancel out and that it shouldn't expect anything more. Workers `A`, `B`, and `C` don't wait on `D`, who can be asleep if it really wants (or maybe working on something else). Nor do the worker explicitly syncronize; they can't fire notifications until they learn that work is done, but they can work on whatever else they like in the meantime.
+
+The downside of the protocol is the broadcasting. In Naiad we started with a very simple version of the protocol, and found that there were *lots* of progress updates being sent around. We introduced several optimizations in the paper, including hierarchical aggregation and some clever buffering. The Rust codebase doesn't seem to suffer from this as much, possibly due to the abstraction boundaries suppressing spurious changes, the it hasn't been exercised at the same scale, either.
 
 ## Conclusions
 
