--- a/posts/2015-11-27.md
+++ b/posts/2015-11-27.md
@@ -4,9 +4,9 @@
 
 This is the second, much delayed, post about differential dataflow. In this post we are going to talk through some of the moving parts of differential dataflow, and sketch some of the reasons behind various choices. Ideally, we'll get you to a point where you understand what should be true about a differential dataflow *operator*, which may allow you to reason about the work done and messages sent by operators in your computations.
 
-Since it has been a while, let's recap what is exciting about differential dataflow, and why you might be interested in its implementation. First, differential dataflow allows you to do some pretty neat things, incrementally updating complicated big-data computations in near real-time. The previous post explains bread-first search, and how you can you can both perform the computation efficiently, as well as update the computation in microseconds.
+Since it has been a while, let's recap what is exciting about differential dataflow, and why you might be interested in its implementation. First, differential dataflow allows you to do some pretty neat things, incrementally updating complicated big-data computations in near real-time. The [previous post](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-29.md) explains bread-first search, and how you can you can both perform the computation efficiently, as well as update the computation in microseconds. There is a whole general big-data programming language in which all computations are incrementally updateable.
 
-Not only can you do neat things with differential dataflow, but its implementation is also pretty neat: each operator's state is effectively an append-only log, what Joe Hellerstein calls a "progressive system". This simplifies a great deal of logic, but it also opens up a few interesting possibilities. For example, distinct differential dataflow operators can share append-only state, which reduces the required computation and memory by departing from a "pure" dataflow implementation.
+Not only can you do neat things with differential dataflow, but its implementation is also pretty neat. Although there are all these incremental updates flowing around, the internal state is basically just a bunch of append-only lists. This is pretty cool, because we are able to get fine-grained incremental udates, and still take advantage of the great properties of append-only immutable state (what Joe Hellerstein calls [progressive systems](https://sites.google.com/site/progressive294/)). Issues like fault-tolerance are a lot easier to handle (haven't yet, sorry), as well as some pretty cool examples of state-sharing between operators which depart a bit from "pure" dataflow.
 
 --- 
 
